--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
     -->
     <title>Community Fibre Answer Search</title>
     <link rel="icon" type="image/x-icon" href="https://communityfibre.co.uk/apple-touch-icon.png">
-  </head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -35,4 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 </html>
